@@ -28,6 +28,8 @@ shutter (0.80~ppa1) jaunty; urgency=low
        [control advanced selection tool with arrow keys]
     -- LP: #367513
        [desktop entry contains deprecated encoding key]
+    -- LP: #370367
+       [DrawingTool -> View has multiple same options]
   * Drawing Tool
     -- LP: #310704
        [object property changes don't take immediate effect]
